maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:23: error: type mismatch;
 found   : Unit
 required: Int
def sommeAngle(x:Int,y:Int):Int={
                                ^